--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 APScheduler==3.6.3
 beautifulsoup4==4.9.3
+boto3==1.17.84
+botocore==1.20.84
 certifi==2020.12.5
 chardet==4.0.0
 idna==2.10
 inko-py==1.0.0
+jmespath==0.10.0
+python-dateutil==2.8.1
 python-telegram-bot==13.5
 pytz==2021.1
 requests==2.25.1
+s3transfer==0.4.2
 six==1.16.0
 soupsieve==2.2.1
 tornado==6.1
