--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,12 @@ idna==2.10
 inko-py==1.0.0
 jmespath==0.10.0
 python-dateutil==2.8.1
+python-dotenv==0.18.0
 python-telegram-bot==13.5
 pytz==2021.1
 requests==2.25.1
 s3transfer==0.4.2
+selenium==3.141.0
 six==1.16.0
 soupsieve==2.2.1
 tornado==6.1
