--- a/requirements.txt
+++ b/requirements.txt
@@ -3,21 +3,31 @@ beautifulsoup4==4.9.3
 boto3==1.17.91
 botocore==1.20.91
 cachetools==4.2.2
+cairocffi==1.2.0
+CairoSVG==2.5.2
 certifi==2021.5.30
+cffi==1.14.6
 chardet==4.0.0
+cssselect2==0.4.1
+defusedxml==0.7.1
 idna==2.10
 inko-py==1.0.0
 jmespath==0.10.0
+Pillow==8.3.1
 prettytable==2.1.0
+pycparser==2.20
 python-dateutil==2.8.1
 python-dotenv==0.18.0
 python-telegram-bot==13.6
 pytz==2021.1
 requests==2.25.1
 s3transfer==0.4.2
+selenium==3.141.0
 six==1.16.0
 soupsieve==2.2.1
+tinycss2==1.1.0
 tornado==6.1
 tzlocal==2.1
 urllib3==1.26.5
 wcwidth==0.2.5
+webencodings==0.5.1
