--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ chardet==4.0.0
 idna==2.10
 inko-py==1.0.0
 jmespath==0.10.0
+Pillow==9.3.0
 prettytable==2.1.0
 python-dateutil==2.8.1
 python-dotenv==0.18.0
