--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ install_requires =
     attrs~=22.2.0
     aiobotocore~=2.4.2
     python-dotenv~=0.21.1
-    openai~=0.26.5
+    openai>=0.26.5
     prettytable~=3.6.0
     inko-py~=1.0.0
     pytz~=2022.7.1
