--- a/setup.cfg
+++ b/setup.cfg
@@ -20,9 +20,9 @@ python_requires = >=3.10
 setup_requires =
     setuptools>=45.2.0
 install_requires =
-    python-telegram-bot~=20.1
+    python-telegram-bot~=20.4
     Pillow~=9.4.0
-    httpx~=0.23.3
+    httpx~=0.24.1
     attrs~=22.2.0
     aiobotocore~=2.4.2
     python-dotenv~=0.21.1
@@ -30,6 +30,7 @@ install_requires =
     prettytable~=3.6.0
     inko-py~=1.0.0
     pytz~=2022.7.1
+    deepl~=1.15.0
 zip_safe = false
 include_package_data = true
 
